--- a/Lesson-5/server/server.template.ejs
+++ b/Lesson-5/server/server.template.ejs
@@ -8,7 +8,9 @@
   <%- style %>
 </head>
 <body>
-  <%- appString %>
+  <div id="app">
+    <%- appString %>
+  </div>
   <%- scripts %>
 </body>
 </html>
