--- a/Lesson-5/client/assets/styles/style.scss
+++ b/Lesson-5/client/assets/styles/style.scss
@@ -5,3 +5,14 @@ body,
   padding: 0;
   height: 100%;
 }
+
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+  -webkit-transition: opacity .5s;
+  -moz-transition: opacity .5s;
+  -ms-transition: opacity .5s;
+  -o-transition: opacity .5s;
+}
